Update meta tags in index.html for improved SEO and branding

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prabhav & Vanshika - Data Analytics & AI Automation</title>
+    <title>Data Analytics & AI Automation</title>
     <meta name="description" content="Freelance data analytics and AI automation consultants. We build dashboards, ML models, chatbots, and Excel automation solutions across India." />
     <meta name="author" content="Prabhav Sharma & Vanshika" />
 
-    <meta property="og:title" content="Prabhav & Vanshika - Data Analytics & AI Automation" />
+    <meta property="og:title" content="Data Analytics & AI Automation" />
     <meta property="og:description" content="Transform your business with data-driven solutions. Expert consultants in Python, Power BI, ML, and AI automation." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://i.pinimg.com/1200x/62/07/ba/6207bafbe5c67dd24ae98f41635c3db5.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://i.pinimg.com/1200x/62/07/ba/6207bafbe5c67dd24ae98f41635c3db5.jpg" />
   </head>
 
   <body>
